hphp/test/zend/good/ext/standard/tests/streams/stream_get_contents_002.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') die("skip: non windows test");
?>