hphp/test/zend/bad/ext/spl/tests/SplFileInfo_getGroup_error.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') die("skip this test not for Windows platforms");
?>